src/syntax/tests/snapshots/ppl__syntax__tests__consume_greater.hir.snap
---
source: src/syntax/tests/mod.rs
expression: hir
---
type Point<U>:
	x: U

Point<Integer> { x: 1 }
