src/syntax/tests/snapshots/ppl__syntax__tests__escaped_id.hir.snap
---
source: src/syntax/tests/mod.rs
expression: hir
---
let mut if: Integer = 1
destroy (if:Integer)
(if:Integer) = 2
