src/syntax/tests/snapshots/ppl__syntax__tests__escaped_id.ir.snap
---
source: src/syntax/tests/mod.rs
expression: ir
---
; ModuleID = 'escaped_id'
source_filename = "escaped_id.ppl"

%"Type<String>" = type { %String, %Integer }
%String = type { ptr }
%Integer = type { ptr }

@"Type<String>" = private global %"Type<String>" zeroinitializer
@0 = private unnamed_addr constant [7 x i8] c"String\00", align 1
@if = global %Integer zeroinitializer

define private void @initialize() !dbg !3 {
  %1 = alloca %"Type<String>", align 8, !dbg !7
  %"Type<String>.name" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 0, !dbg !7
  %2 = call %String @string_from_c_string_and_length(ptr @0, i64 6), !dbg !8
  store %String %2, ptr %"Type<String>.name", align 8, !dbg !8
  %"Type<String>.size" = getelementptr inbounds %"Type<String>", ptr %1, i32 0, i32 1, !dbg !8
  %3 = call %Integer @integer_from_i64(i64 8), !dbg !8
  store %Integer %3, ptr %"Type<String>.size", align 8, !dbg !8
  %4 = load %"Type<String>", ptr %1, align 8, !dbg !8
  store %"Type<String>" %4, ptr @"Type<String>", align 8, !dbg !8
  br label %return, !dbg !8

return:                                           ; preds = %0
  ret void
}

declare %String @string_from_c_string_and_length(ptr, i64)

declare %Integer @integer_from_i64(i64)

define private void @initialize.1() !dbg !9 {
  %1 = call %Integer @integer_from_i64(i64 1), !dbg !10
  store %Integer %1, ptr @if, align 8, !dbg !10
  br label %return, !dbg !10

return:                                           ; preds = %0
  ret void
}

define void @escaped_id.execute() !dbg !11 {
init_globals:
  call void @initialize(), !dbg !12
  call void @initialize.1(), !dbg !13
  br label %0, !dbg !13

0:                                                ; preds = %init_globals
  %1 = load %Integer, ptr @if, align 8, !dbg !14
  call void @destroy_integer(%Integer %1), !dbg !14
  %2 = call %Integer @integer_from_i64(i64 2), !dbg !15
  store %Integer %2, ptr @if, align 8, !dbg !15
  br label %return, !dbg !13

return:                                           ; preds = %0
  ret void
}

declare void @destroy_integer(%Integer)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "ppl", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false, sysroot: "/")
!2 = !DIFile(filename: "escaped_id.ppl", directory: ".")
!3 = distinct !DISubprogram(name: "initialize", linkageName: "initialize", scope: !2, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DISubroutineType(types: !5)
!5 = !{!6}
!6 = !DIBasicType(name: "i32", size: 32, encoding: DW_ATE_signed)
!7 = !DILocation(line: 1, column: 8, scope: !3)
!8 = !DILocation(line: 0, scope: !3)
!9 = distinct !DISubprogram(name: "initialize.1", linkageName: "initialize.1", scope: !2, file: !2, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!10 = !DILocation(line: 0, column: 15, scope: !9)
!11 = distinct !DISubprogram(name: "escaped_id.execute", linkageName: "escaped_id.execute", scope: !2, file: !2, line: 1, type: !4, spFlags: DISPFlagDefinition, unit: !1)
!12 = !DILocation(line: 1, column: 8, scope: !11)
!13 = !DILocation(line: 0, column: 15, scope: !11)
!14 = !DILocation(line: 1, scope: !11)
!15 = !DILocation(line: 1, column: 7, scope: !11)
