src/syntax/tests/snapshots/ppl__syntax__tests__invalid_indentation.error.snap
---
source: src/syntax/tests/mod.rs
expression: err
---
Error: lexer::invalid_indentation

  × using spaces instead of tabs for indentation
   ╭─[invalid_indentation.ppl:2:1]
 1 │ loop:
 2 │     println "Spaces suck"
   · ──┬─
   ·   ╰── using spaces instead of tabs for indentation
   ╰────
