src/syntax/tests/snapshots/ppl__syntax__tests__multiple_errors.error.snap
---
source: src/syntax/tests/mod.rs
expression: err
---
Error: lexer::unexpected_token

  × expected `=`, got `integer`
   ╭─[multiple_errors.ppl:1:7]
 1 │ let x 1
   ·       ─
 2 │ if
   ╰────
parser::missing_expression

  × missing expression
   ╭─[multiple_errors.ppl:2:3]
 1 │ let x 1
 2 │ if
   ╰────
